--- a/src/main/webapp/js/login.css
+++ b/src/main/webapp/js/login.css
@@ -2,7 +2,7 @@
 /* CSS Document */
 .main_box {
     position: absolute; top:50%; left:50%; margin-top:-230px; margin-left: -200px; padding: 30px; width:450px; height:320px;
-	background:url(../images/1.png);
+	background:url(1.png);
     border-radius: 10px;
 }
 .main_box .setting {position: absolute; top: 5px; right: 10px; width: 10px; height: 10px;}
